# driftguard

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.yml
notebooks/: 01_drift_simulation.ipynb
src/consumer/: feature_pipeline.py
src/drift/: detector.py
src/producer/: event_generator.py
tests/: test_drift_detector.py  test_event_generator.py  test_sliding_window.py
